<resources>
    <string name="facebook_app_id">729833804072709</string>
    <string name="app_name">RitmanPay</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_otp">Already have an otp?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_IN">Sign IN</string>
    <string name="sign_up_with_email_mobile">Sign Up with Email/Mobile</string>
    <string name="skip">Skip</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_mobile_no">Email / Mobile No*</string>
    <string name="pin">PIN*</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="submit">Submit</string>
    <string name="please_type_the_verification_code_sent_to_your_mobile_number">Please type the verification code sent to your mobile number</string>
    <string name="verification_code">Verification Code</string>
    <string name="first_name">First Name*</string>
    <string name="Please_Enter_First_Name">Please Enter First Name</string>
    <string name="Please_Enter_LAST_Name">Please Enter Last Name</string>
    <string name="Please_Enter_Nick_Name">Please Enter Nick Name</string>
    <string name="Please_Enter_Mobile_number">"Please Enter Mobile number"</string>
    <string name="Please_Enter_valid_Mobile_number">"Please Enter valid mobile number"</string>
    <string name="Please_Enter_email">"Please Enter Email"</string>
    <string name="Please_Enter_vaild_email">"Please Enter valid email address"</string>
    <string name="Please_Enter_address">"Please Enter address"</string>
    <string name="Please_Select_gender">"Please Select Gender"</string>
    <string name="Please_Select_countryof_residence">"Please Select country of residence"</string>
    <string name="Please_enter_passport_no">"Please Enter Passport no"</string>
    <string name="Please_enter_emirates_id">"Please enter Emirates Id"</string>
    <string name="Please_enter_second_id">"Please enter Second Id"</string>
    <string name="registration_done_msg">"Your registration is done, you will get the OTP shortly"</string>
    <string name="passport_validation_msg">"Passport no number should be 10 digits"</string>
    <string name="emirates_validation_msg">"EmiratesId should be 10 digits"</string>
    <string name="second_Id_validation_msg">"SecondId should be 3 digits"</string>
    <string name="Please_Enter_Verification_Code">"Please Enter Verification Code"</string>
    <string name="Please_Enter_Email_mobile_number">"Please Enter Email or Mobile Number"</string>
    <string name="Please_Enter_pin">"Please Enter Pin"</string>
    <string name="Please_Enter_amount">"Please enter amount."</string>
    <string name="Please_Enter_valid_amount">"Please enter valid amount."</string>
    <string name="Please_Enter_amount_send">"Please enter amount to send."</string>
    <string name="Amount_larger_your_balance">"Amount is larger than your balance"</string>
    <string name="Mobile_not_registerd_us">"Mobile Number not Registered With Us."</string>
    <string name="Enter_six_digit">"Please enter 6 digit PIN."</string>
    <string name="Please_Enter_old_pin">"Please enter old PIN"</string>
    <string name="Please_Enter_new_pin">"Please enter new PIN"</string>
    <string name="Please_Enter_repeat_pin">"Please enter repeat PIN"</string>
    <string name="Please_Enter_id_number">"Please Enter IdNumber"</string>
    <string name="Please_Enter_account_number">"Please Enter Account No."</string>
    <string name="Please_Enter_bank_name">"Please Enter Bank Name"</string>
    <string name="Please_Enter_branch_code">"Please Enter Branch code"</string>
    <string name="Please_Enter_branch_address">"Please Enter Branch address"</string>
    <string name="Please_Enter_zip_code">"Please Enter Zip code"</string>
    <string name="Please_Enter_send_money">"Please enter Send Money."</string>
    <string name="Please_Enter_receive_money">"Please enter Receive Money."</string>
    <string name="Please_Enter_landmark">"Please Enter Destination Landmark"</string>
    <string name="Please_Enter_destination">"Please Enter Destination Address"</string>
    <string name="Please_Enter_valid_bank_details">"Please Enter Valid Bank Details"</string>
    <string name="Please_Enter_minimum_account_number">"Please enter minimum 12 digit Account number"</string>
    <string name="Please_Enter_valid_id_number">"Please Enter Valid IdNumber"</string>
    <string name="Mobile_number_9_digits">"Mobile Number should be 9 digits"</string>
    <string name="Pin_six_digits">"PIN must be 6 digits."</string>
    <string name="Pin_does_not_match">"PIN Does Not Match"</string>
    <string name="Please_select_country">"Please Select Country"</string>
    <string name="all">"All"</string>
    <string name="Please_select_plan">"Please Select Plan"</string>
    <string name="Please_id_description">"Please Enter Id Description"</string>
    <string name="Please_select_purpose_transfer">"Please Select Purpose Of Transfer"</string>
    <string name="Please_select_agents">Please Select availiable Agent"</string>
    <string name="Please_select_Dob">"Please Select Date of Birth"</string>
    <string name="Please_select_nationality">"Please Select Nationality"</string>
    <string name="Please_select_idType">"Please Select IdType"</string>
    <string name="last_name">Last Name*</string>
    <string name="address">Address*</string>
    <string name="address_">Address:</string>
    <string name="street">Street*</string>
    <string name="email">Email*</string>
    <string name="passport_no">Passport No.*</string>
    <string name="emirates_id">Emirates Id*</string>
    <string name="second_id">Second Id*</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="don_t_worry_just_fill_in_your_email_mobile_no_and_we_ll_help_your_reset_your_pin">Don\'t worry! Just Fill in your Email / Mobile No and we\'ll help your reset your PIN</string>
    <string name="send">Send</string>
    <string name="pay_now">Pay Now</string>
    <string name="enter_wallet_pin">Enter Wallet PIN</string>
    <string name="are_you_sure_want_to_deduct_money_from_wallet">Are you sure want to deduct\nmoney from wallet</string>
    <string name="kyc">KYC</string>
    <string name="quick_pay">Quick Pay</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="history">History</string>
    <string name="new_wallet_pin">New Wallet PIN*</string>
    <string name="old_wallet_pin">Old Wallet PIN*</string>
    <string name="repeat_new_wallet_pin">Repeat New Wallet PIN*</string>
    <string name="save">Save</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="name_of_the_card">Name of the Card</string>
    <string name="save_this_card">Save this card</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="bank_name">Bank Name*</string>
    <string name="bank_name_">Bank Name:</string>
    <string name="bank_account_number">Account Number*</string>
    <string name="bank_account_number_">Account Number:</string>
    <string name="re_enter_bank_account_number">Re Enter Account Number*</string>
    <string name="account_holder_name">Account Holder Name*</string>
    <string name="ifsc_code">IFSC Code/IBAN No*</string>
    <string name="enter_bvn">Enter BVN</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="id_issue_date">Id Issue Date</string>
    <string name="id_expirey_date">Id Expiry Date</string>
    <string name="save_account_details">Save Account Details</string>
    <string name="valid_amount">Please Enter Valid Amount</string>
    <string name="edit">Edit</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_language">Change Language</string>
    <string name="a_c_balance">Balance:&#160;</string>
    <string name="points">Points:</string>
    <string name="add_money">Add Money</string>
    <string name="add_money_to_wallet">Add Money to Wallet</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="your_language"> Your Language</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="total_payment_to_be_made">Total payment to be made:</string>
    <string name="stored_bank_account">Stored Bank Account</string>
    <string name="stored_cards">Stored Cards</string>
    <string name="credit_card_debit_card">Credit Card / Debit Card</string>
    <string name="bank_account">Bank Account</string>
    <string name="wallet">Wallet</string>
    <string name="verification">Verification</string>
    <string name="forgot_pin_">Forgot PIN</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_your_document">Upload your Document</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="mobile_recharge">Mobile top-up</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="bill_pay">Bill Pay</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="loyalty_program">Loyalty Program</string>
    <string name="notification">Notification</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="invite">Invite</string>
    <string name="about_settings_etc">About, Settings, etc.</string>
    <string name="load_money">Load Money</string>
    <string name="wallet_transfer">Money Transfer</string>
    <string name="mobile">Mobile</string>
    <string name="profile">Profile</string>
    <string name="transaction_history">Transaction History</string>
    <string name="paid">Paid</string>
    <string name="received">received</string>
    <string name="send_money">Send Money*</string>
    <string name="bank">Bank</string>
    <string name="cash_pickup">Cash Pickup</string>
    <string name="door_to_door_delivery">Door to Door Delivery</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="amount">Amount</string>
    <string name="save_number">Save Number</string>
    <string name="recharge_phone_number">Recharge Phone Number*</string>
    <string name="country_of_residence">Country of Residence*</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="select_network">Select Network</string>
    <string name="wallet_summary">Wallet Summary</string>
    <string name="please_wait">Please wait...</string>
    <string name="next">Next</string>
    <string name="purpose_of_transfer">Purpose of Transfer*</string>
    <string name="add">Add</string>
    <string name="bank_code">Bank Code*</string>
    <string name="bank_address">Bank Address*</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="todo">TODO</string>
    <string name="textOffer">We offer you the best Foreign \n Exchange rates</string>
    <string name="create">Create an account</string>
    <string name="already">Already a customer?</string>
    <string name="check_rates">Check Our Rates</string>
</resources>