<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/navigation_white"
    android:orientation="horizontal">

  <ImageView
      android:id="@+id/backImageViewHeader"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:contentDescription="@string/todo"
      android:padding="@dimen/_7sdp"
      android:src="@drawable/back_btn"
      android:tint="@color/colorBlack" />

  <TextView
      android:id="@+id/titleTextViewViewHeader"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/sign_in"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/_12ssp" />

  <TextView
      android:id="@+id/skipTextViewViewHeader"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:padding="@dimen/_5sdp"
      android:src="@drawable/back_btn"
      android:text="@string/skip"
      android:textColor="@color/colorBlack"
      android:textSize="@dimen/_12ssp"
      android:visibility="invisible" />

</LinearLayout>