<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLinearLayoutForgotPIN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <include
      layout="@layout/my_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/dontwrrytextview"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:layout_marginTop="@dimen/_20sdp"
      android:text="@string/don_t_worry_just_fill_in_your_email_mobile_no_and_we_ll_help_your_reset_your_pin"
      android:textSize="@dimen/_12ssp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/_20sdp"
      android:layout_marginRight="@dimen/_20sdp"
      android:layout_marginTop="@dimen/_30sdp"
      android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

      <LinearLayout
          android:id="@+id/countrySpinnerForgot"
          android:layout_width="@dimen/_75sdp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/_10sdp"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/countryCodeTextViewForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/_91"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp" />

        <ImageView
            android:id="@+id/countryCodeImageViewForgot"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_19sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_1sdp"
            android:contentDescription="TODO" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_1sdp"
            android:src="@drawable/dropdown_arrow"
            android:contentDescription="TODO" />
      </LinearLayout>

      <TextView
          android:layout_width="@dimen/_65sdp"
          android:layout_height="0.3dp"
          android:layout_gravity="bottom"
          android:layout_marginBottom="@dimen/_5sdp"
          android:background="@color/colorSpinner" />
    </FrameLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailMobileNoEditTextForgotPinActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:hint="@string/email_mobile_no"
        android:inputType="text"
        android:maxLength="50"
        android:paddingLeft="@dimen/_5sdp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_11ssp"
        app:met_baseColor="@color/colorBlack"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="@dimen/_10ssp"
        app:met_primaryColor="@color/colorGreen"
        app:met_singleLineEllipsis="false" />
  </LinearLayout>

  <TextView
      android:id="@+id/sendTextViewForgotPinActivity"
      style="@style/CustomButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/_35sdp"
      android:background="@drawable/yellow_btn"
      android:text="@string/send" />
</LinearLayout>